--- a/aWebsite/index.html
+++ b/aWebsite/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>sup</title>
+        <title>:P</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <h1>Hello, world.</h1>
         <h2>Super happy fun time!</h2>
-        <p>Mint chocolate chip is the best ice cream flavor.</p>
+        <p><a href="http://en.wikipedia.org/wiki/Mint_chocolate_chip" target="_blank">Mint chocolate chip</a> is the best ice cream flavor.</p>
+        <img src="img/mcc.jpeg" width="500" />
         <ul>
             <li>It's nice and minty.</li>
             <li style="color:green">It's freakin' GREEN</li>
