--- a/aWebsite/index.htm
+++ b/aWebsite/index.htm
@@ -137,7 +137,7 @@
 
         <div id="content">
             <h1>Sup.</h1>
-            <p><strike>MenuMatic takes a sematic ordered or unordered list of links and uses MooTools 1.2 to turn it into a dynamic drop down menu system, with enhanced usability and flair. For users without javascript, it falls back on a CSS menu system based on <a href="http://www.carroll.org.uk/" title="Matthew Carroll" target="_blank">Matthew Carroll's</a> keyboard accessible flavor of <a href="http://www.htmldog.com/articles/suckerfish/dropdowns/" title="Suckerfish CSS Dropdowns" target="_blank">Suckerfish Dropdowns</a> by <a href="http://www.htmldog.com/ptg/" title="Patrick Griffiths" target="_blank">Patrick Griffiths</a> and <a href="http://www.danwebb.net/" target="_blank" title="Dan Webb">Dan Webb</a>.</strike> <strong>2HU HIJACK LOL</strong>
+            <p>Blah blah blah I did not have a lorem ipsum generator handy etc etc.
             </p>
         </div>
 
