CSS fix & edit, article edit

--- a/aWebsite01/import/include.htm
+++ b/aWebsite01/import/include.htm
@@ -5,9 +5,9 @@
         <li>
             <a href="index.htm">links</a>
             <ul>
-                <li><a href="https://github.com/pbenson?tab=repositories">GitHub</a>
+                <li><a target="_blank" href="https://github.com/blatherskite?tab=repositories">GitHub</a>
                 </li>
-                <li><a href="http://mrbenson.org">WordPress</a>
+                <li><a target="_blank" href="http://osamala.mrbenson.org">WordPress</a>
                 </li>
             </ul>
         </li>
@@ -32,17 +32,6 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="#">Scratch</a>
-                    <ul>
-                        <li><a href="http://scratch.mit.edu/projects/29260666/#fullscreen">Lissajous</a>
-                        </li>
-                        <li><a href="http://scratch.mit.edu/projects/12240232/#fullscreen">Whitney Music Box</a>
-                        </li>
-                    </ul>
-                </li>
-                <li><a href="http://www.mrbenson.org/category/geekcraft/arduino/">Arduino</a>
-                </li>
-
             </ul>
         </li>
 
