--- a/aWebsite01/index.htm
+++ b/aWebsite01/index.htm
@@ -18,13 +18,21 @@
 
     <div id="container">
         <div id="include"></div>
-        <div id="content ">
-            <h1>Sup.</h1>
-            <p>Blah blah blah I did not have a lorem ipsum generator handy etc etc.
+        <div id="content">
+            <h1>Blatherskite</h1>
+            <p>
+                /ˈblaT͟Hərˌskīt/
             </p>
+            <p><i>noun</i>
+            </p>
+            <ul>
+                <li>a person who talks great lengths without making much sense</li>
+                <li>foolish talk; nonsense</li>
+                <li>the person who made this website ^_^</li>
+            </ul>
         </div>
     </div>
-    <div id="footer ">
+    <div id="footer">
         ahahahahahahaha
     </div>
 
