--- a/aWebsite01/article/html-tags.htm
+++ b/aWebsite01/article/html-tags.htm
@@ -31,7 +31,7 @@
             <h1>HTML tags</h1>
             <dl>
                 <dt>&lt;a&gt;</dt>
-                <dd>The anchor tag is used to.... The most useful attribute is <strong>href</strong>, which is used to... </dd>
+                <dd>The anchor tag is used to link to other HTML documents. The most useful attribute is <strong>href</strong>, which is used to indicate where the desired document is located in.</dd>
                 <dt>&lt;base&gt;</dt>
                 <dd>The base tag is used to... </dd>
                 <dt>&lt;body&gt;</dt>
