--- a/aWebsite01/import/include.htm
+++ b/aWebsite01/import/include.htm
@@ -1,4 +1,4 @@
-<!--<canvas id="mrb_bg" data-processing-sources="mrb_bg.pde" width="1280" height="900"></canvas>--><a id="logo" href="http://mrbenson.org">Mr. Benson's Home Page</a>
+<!--<canvas id="mrb_bg" data-processing-sources="mrb_bg.pde" width="1280" height="900"></canvas>--><a id="logo" href="index.htm">Mr. Benson's Home Page</a>
 <!-- BEGIN Menu -->
 <div class="menu">
     <ul id="nav">
