--- a/aWebsite01/article/html-tags.htm
+++ b/aWebsite01/article/html-tags.htm
@@ -35,7 +35,7 @@
                 <dt>&lt;base&gt;</dt>
                 <dd>The base tag is used to... </dd>
                 <dt>&lt;body&gt;</dt>
-                <dd>The body tag is used to... </dd>
+                <dd>The body tag is used to signify where the main content begins. </dd>
                 <dt>&lt;head&gt;</dt>
                 <dd>The div tag is used to... </dd>
                 <dt>&lt;div&gt;</dt>
@@ -45,9 +45,9 @@
                 <dt>&lt;html&gt;</dt>
                 <dd>The html tag is used to... </dd>
                 <dt>&lt;img&gt;</dt>
-                <dd>The image tag is used to... The most useful attribute is <strong>src</strong>, which is used to... </dd>
+                <dd>The image tag is used to add an image onto the document. The most useful attribute is <strong>src</strong>, which is used to specify where the image will be taken from. This can be referenced either locally or from another website. </dd>
                 <dt>&lt;li&gt;</dt>
-                <dd>The line item tag is used to... </dd>
+                <dd>The line item tag is used to add an item to the list it is inside. It works for both ordered and unordered lists, with either a sequenced number or bullet point accordingly. </dd>
                 <dt>&lt;link&gt;</dt>
                 <dd>The link tag is used to... </dd>
                 <dt>&lt;meta&gt;</dt>
